--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <script src="js/switch.js"></script>
+  <script src="js\continue_varlocalesglobales_objects.js"></script>
 
 </body>
 </html>
