3. Trabajando con el DOM y Javascript
Co-Authored-By: nicolas <nicolasbncruz@hotmail.com>

--- a/DOM.html
+++ b/DOM.html
@@ -17,7 +17,7 @@
     <a class="boton">Botón</a>
   </div>
 
-  <script src="js/selectoresDOM.js"></script>
+  <script src="js/reemplazarEliminarElementos.js"></script>
 
 </body>
 </html>
